Fixed CSS padding movie-wrap

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8744,7 +8744,7 @@ button:focus {
   transition: all .3s; }
 
 .movie-wrap {
-  padding: 100px 0 100px 70px; }
+  padding: 100px 0 0 70px; }
 
 .movie-watching {
   margin: 0 auto; }
